# foundry

./: .gitignore  Cargo.toml  README.md
src/: buffer.rs  gap_buffer.rs  main.rs  project.rs  utils.rs
src/math/: Cargo.toml  lib.rs  matrix.rs  point.rs  vector2.rs  vector3.rs
src/project/: mod.rs
src/project/history/: mod.rs
src/render/: font_cache.rs  matrix.rs  mod.rs  text_panel.rs  text_view.rs  window.rs
src/session/: buffer.rs  mod.rs  project.rs
