[package]
name = "foundry"
version = "0.1.0"
authors = ["currysoup <sam92cutler@hotmail.co.uk>"]

[dependencies]
cargo = "0.5.0"
chrono = "0.2.16"
docopt = "0.6.73"
docopt_macros = "0.6.73"
glium = "0.9.0"
glium_text = "0.6.0"
quick-error = "0.1.4"
rustc-serialize = "0.3.16"
rust-crypto = "0.2.33"

[dependencies.math]
path = "src/math"
